feat: Add comprehensive messaging features
- Add i18n support (Turkish/English)
- Add login/authentication system
- Add message starring functionality
- Add message deletion with confirmation
- Add mark as unread feature
- Add message pinning feature
- Add chat notes functionality
- Add bulk messaging with variable support
- Add new message creation
- Add message type filtering
- Add notification system
- Add 404 page
- Add message menu with popover
- Update API documentation
- Improve UI/UX with better message actions

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
    
     <meta property="og:title" content="Whatsapp Web Clone" />
-    <meta name="description" content="Whatsapp Web Clone by Jazim Abbas" />
+    <meta name="description" content="Whatsapp Web Clone by Sait Yaşar" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,6 +24,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>WhatsApp Web</title>
+    <script>
+      // Title will be updated by React app
+    </script>
 
     <script src="https://use.fontawesome.com/11830bac20.js"></script>
   </head>
